--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <title>Freelancer - Start Bootstrap</title>
+  </head>
+  <body>
+    <header>
+      <h1>START BOOTSTRAP</h1>
+      <nav>
+        <a href="#">Portafolio</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+    <main>
+      <img src="assets/images/profile.png" alt="Profile">
+      <p>START BOOTSTRAP</p>
+      <hr>
+      <h2>
+        <i class="fas fa-star"></i>
+      </h2>
+      <p>Web Developer - Graphic Artist - User Experience Designer</p>
+    </main>
+    <section>
+      
+    </section>
+
+  </body>
+</html><!-- Agrega aquí la estructura HTML de tu sitio web -->
