--- a/index.html
+++ b/index.html
@@ -26,7 +26,84 @@
       <p>Web Developer - Graphic Artist - User Experience Designer</p>
     </main>
     <section>
-      
+      <div class="">
+        <p>PORTFOLIO</p>
+        <hr>
+        <h2><i class="fas fa-star"></i></h2>
+        <div class="portfolio">
+          <div class="column">
+            <div class="cabin">
+              <img src="assets/images/portfolio/cabin.png" alt="">
+            </div>
+            <div class="cake">
+              <img src="assets/images/portfolio/cake.png" alt="">
+            </div>
+            <div class="circus">
+              <img src="assets/images/portfolio/circus.png" alt="">
+            </div>
+            <div class="game">
+              <img src="assets/images/portfolio/game.png" alt="">
+            </div>
+            <div class="safe">
+              <img src="assets/images/portfolio/safe.png" alt="">
+            </div>
+            <div class="submarine">
+              <img src="assets/images/portfolio/submarine.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="about">
+        <p>ABOUT</p>
+        <hr>
+        <h2><i class="fas fa-star"></i></h2>
+        <div class="column">
+          <div class=""> <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+          <div class=""> <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+          </div>
+          </div>
+        </div>
+        <div class="download">
+          <i class="fas fa-download"></i>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="contact">
+        <div class="">Name
+        </div>
+        <div class="">Email adress
+        </div>
+        <div class="">Phone Number
+        </div>
+        <div class="">Message
+        </div>
+        <hr>
+        <div class="">Send
+        </div>
+        <div class="column">
+          <div class="">
+          <h4>LOCATION</h4>
+          <p>2215 John Daniel Drive
+            <br>Clark, MO 65243</p>
+          </div>
+          <div class="">
+            <h4>AROUND THE WEB</h4>
+          </div>
+          <div class="">
+            <h4>ABOUT FREELANCER</h4>
+            <p>Freelance is a free to use, open source Bootstrap theme created by
+              <a href="http://startbootstrap.com">Start Bootstrap.</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="">
+        <div class="">
+          <small>Copyright © Your Website 2018</small>
+        </div>
+      </div>
     </section>
 
   </body>
