--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <title>Freelancer - Start Bootstrap</title>
   </head>
   <body>
+    <div class="header">
     <header>
-      <h1>START BOOTSTRAP</h1>
       <nav>
-        <a href="#">Portafolio</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <ul>
+          <li><a href="#">START BOOTSTRAP</a></li>
+          <li><a href="#">PORTFOLIO</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
       </nav>
     </header>
+    </div>
     <main>
       <img src="assets/images/profile.png" alt="Profile">
       <p>START BOOTSTRAP</p>
