--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <title>Freelancer - Start Bootstrap</title>
   </head>
@@ -21,18 +22,21 @@
     </header>
     </div>
     <main>
-      <img src="assets/images/profile.png" alt="Profile">
-      <p>START BOOTSTRAP</p>
-      <hr>
-      <h2>
+      <div class="profile">
+        <img src="assets/images/profile.png" alt="Profile">
+      </div>
+      <div class="start">
+        START BOOTSTRAP
+      </div>
+      <hr class="line">
         <i class="fas fa-star"></i>
-      </h2>
       <p>Web Developer - Graphic Artist - User Experience Designer</p>
     </main>
-    <section>
-      <div class="">
-        <p>PORTFOLIO</p>
-        <hr>
+    <section id="portfolio">
+      <div class="port">
+        <div class="portafolio">PORTFOLIO
+        </div>
+        <hr class="line">
         <h2><i class="fas fa-star"></i></h2>
         <div class="portfolio">
           <div class="column">
