listo portfolio sin detalle estrella

--- a/index.html
+++ b/index.html
@@ -32,42 +32,31 @@
         <i class="fas fa-star"></i>
       <p>Web Developer - Graphic Artist - User Experience Designer</p>
     </main>
-    <section id="portfolio">
-      <div class="port">
+    <section class="column">
+      <div>
+        <section  class="port">
         <div class="portafolio">PORTFOLIO
         </div>
         <hr class="line">
         <h2><i class="fas fa-star"></i></h2>
-        <div class="portfolio">
-          <div class="column">
-            <div class="cabin">
-              <img src="assets/images/portfolio/cabin.png" alt="">
-            </div>
-            <div class="cake">
-              <img src="assets/images/portfolio/cake.png" alt="">
-            </div>
-            <div class="circus">
-              <img src="assets/images/portfolio/circus.png" alt="">
-            </div>
-            <div class="game">
-              <img src="assets/images/portfolio/game.png" alt="">
-            </div>
-            <div class="safe">
-              <img src="assets/images/portfolio/safe.png" alt="">
-            </div>
-            <div class="submarine">
-              <img src="assets/images/portfolio/submarine.png" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+          <section>
+            <div class="img"><a href="#"><img src="assets/images/portfolio/cabin.png"></a></div>
+            <div class="img"><a href="#"><img src="assets/images/portfolio/cake.png"></a></div>
+            <div class="img"><a href="#"><img src="assets/images/portfolio/circus.png"></a></div>
+          </section>
+   <!--Section inferior -->
+          <section>
+            <div class="img"><a href="#"><img src="assets/images/portfolio/game.png"></a></div>
+            <div class="img"><a href="#"><img src="assets/images/portfolio/safe.png"></a></div>
+            <div class="img"><a href="#"><img src="assets/images/portfolio/submarine.png"></a></div>
+          </section>
+        </section>
     <section>
       <div class="about">
         <p>ABOUT</p>
         <hr>
         <h2><i class="fas fa-star"></i></h2>
-        <div class="column">
+        <div class="columnDos">
           <div class=""> <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
           <div class=""> <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
           </div>
