--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         START BOOTSTRAP
       </div>
       <hr class="line">
-        <i class="fas fa-star"></i>
+        <i id="uno" class="fas fa-star"></i>
       <p>Web Developer - Graphic Artist - User Experience Designer</p>
     </main>
     <section class="column">
@@ -54,16 +54,16 @@
     <section>
       <div class="about">
         <p>ABOUT</p>
-        <hr>
-        <h2><i class="fas fa-star"></i></h2>
-        <div class="columnDos">
-          <div class=""> <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-          <div class=""> <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+        <hr class="line">
+        <h2><i id="uno" class="fas fa-star"></i></h2>
+        <section>
+          <div class="paragraph">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
           </div>
+          <div class="paragraph">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
           </div>
-        </div>
+        </section>
         <div class="download">
-          <i class="fas fa-download"></i>
+          <a href="#"><i class="fas fa-download"> Download Now! </i></a> 
         </div>
       </div>
     </section>
