--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <i id="uno" class="fas fa-star"></i>
       <p>Web Developer - Graphic Artist - User Experience Designer</p>
     </main>
-    <section class="column">
+    <section>
       <div>
         <section  class="port">
-        <div class="portafolio">PORTFOLIO
+        <div class="blue">PORTFOLIO
         </div>
         <hr class="line">
         <h2><i class="fas fa-star"></i></h2>
@@ -63,12 +63,15 @@
           </div>
         </section>
         <div class="download">
-          <a href="#"><i class="fas fa-download"> Download Now! </i></a> 
+          <a href="#"><i class="fas fa-download"> <p id="down"> Download Now! </p> </i></a>
         </div>
       </div>
     </section>
-    <section>
-      <div class="contact">
+    <section  class="contact">
+      <div class="b">
+        CONTACT ME
+      </div>
+      <div>
         <div class="">Name
         </div>
         <div class="">Email adress
@@ -80,28 +83,26 @@
         <hr>
         <div class="">Send
         </div>
-        <div class="column">
-          <div class="">
-          <h4>LOCATION</h4>
-          <p>2215 John Daniel Drive
-            <br>Clark, MO 65243</p>
-          </div>
-          <div class="">
-            <h4>AROUND THE WEB</h4>
-          </div>
-          <div class="">
-            <h4>ABOUT FREELANCER</h4>
-            <p>Freelance is a free to use, open source Bootstrap theme created by
-              <a href="http://startbootstrap.com">Start Bootstrap.</a></p>
-          </div>
-        </div>
       </div>
-      <div class="">
-        <div class="">
-          <small>Copyright © Your Website 2018</small>
-        </div>
-      </div>
-    </section>
+      </section>
+      <footer class="footer">
+        <section>
+          <div class="foot">LOCATION</div>
+          <div class="foot">AROUND THE WEB</div>
+          <div class="foot">ABOUT FREELANCER</div>
+        </section>
+        <section>
+          <div class="foot">
+            <p>2215 John Daniel Drive <br>
+             Clark, MO 65243</p>
+          </div>
+          <div class="foot">LOCATION</div>
+          <div class="foot">Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap.</a></div>
+        </section>
 
+      </footer>
+      <section class="copyright">
+       <p>Copyright © Your Website 2017</p>
+   </section>
   </body>
 </html><!-- Agrega aquí la estructura HTML de tu sitio web -->
