--- a/index.html
+++ b/index.html
@@ -85,21 +85,22 @@
         </div>
       </div>
       </section>
-      <footer class="footer">
+      <footer>
         <section>
           <div class="foot">LOCATION</div>
           <div class="foot">AROUND THE WEB</div>
           <div class="foot">ABOUT FREELANCER</div>
         </section>
         <section>
-          <div class="foot">
-            <p>2215 John Daniel Drive <br>
-             Clark, MO 65243</p>
+          <div class="foottwo">
+              2215 John Daniel Drive <br>
+              Clark, MO 65243
           </div>
-          <div class="foot">LOCATION</div>
-          <div class="foot">Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap.</a></div>
+          <div class="foottwo">LOCATION</div>
+          <div class="foottwo">Freelance is a free to use, open source
+            <br> Bootstrap theme created by <a href="http://startbootstrap.com">Start
+            <br> Bootstrap.</a></div>
         </section>
-
       </footer>
       <section class="copyright">
        <p>Copyright © Your Website 2017</p>
