intento de formulario

--- a/index.html
+++ b/index.html
@@ -62,28 +62,30 @@
           <div class="paragraph">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
           </div>
         </section>
-        <div class="download">
-          <a href="#"><i class="fas fa-download"> <p id="down"> Download Now! </p> </i></a>
+        <div >
+          <a class="button" href="#"><i class="fas fa-download"> <p id="boton"> Download Now! </p> </i></a>
         </div>
       </div>
     </section>
     <section  class="contact">
-      <div class="b">
+      <div class="blue">
         CONTACT ME
       </div>
-      <div>
-        <div class="">Name
+      <hr class="line">
+      <h2><i class="fas fa-star"></i></h2>
+      <form>
+        Name<br>
+        <input type="text" name="name"><br>
+        Email adress<br>
+        <input type="text" name="email"><br>
+        Phone Number<br>
+        <input type="text" name="phone"><br>
+        Message<br>
+        <input type="text" name="messa"><br>
+        <div>
+          <a class="buttondos" href=""> <p id="boton"> Send </p> </a>
         </div>
-        <div class="">Email adress
-        </div>
-        <div class="">Phone Number
-        </div>
-        <div class="">Message
-        </div>
-        <hr>
-        <div class="">Send
-        </div>
-      </div>
+      </form>
       </section>
       <footer>
         <section>
