--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <!-- vinculación a hoja de estilos, fuentes e íconos -->
     <link rel="stylesheet" href="./css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
@@ -9,6 +10,7 @@
     <title>Freelancer - Start Bootstrap</title>
   </head>
   <body>
+    <!-- encabezado, menú de navegación -->
     <div class="header">
     <header>
       <nav>
@@ -22,6 +24,7 @@
     </header>
     </div>
     <main>
+      <!-- seccion "profile" -->
       <div class="profile">
         <img src="assets/images/profile.png" alt="Profile">
       </div>
@@ -34,17 +37,19 @@
     </main>
     <section>
       <div>
+        <!-- sección del portfolio-->
         <section  class="port">
         <div class="blue">PORTFOLIO
         </div>
         <hr class="line">
         <h2><i class="fas fa-star"></i></h2>
+        <!-- Columnas de imagen -->
           <section>
             <div class="img"><a href="#"><img src="assets/images/portfolio/cabin.png"></a></div>
             <div class="img"><a href="#"><img src="assets/images/portfolio/cake.png"></a></div>
             <div class="img"><a href="#"><img src="assets/images/portfolio/circus.png"></a></div>
           </section>
-   <!--Section inferior -->
+        <!--columnas de imagen-->
           <section>
             <div class="img"><a href="#"><img src="assets/images/portfolio/game.png"></a></div>
             <div class="img"><a href="#"><img src="assets/images/portfolio/safe.png"></a></div>
@@ -52,27 +57,32 @@
           </section>
         </section>
     <section>
+      <!-- sección about -->
       <div class="about">
         <p>ABOUT</p>
         <hr class="line">
         <h2><i id="uno" class="fas fa-star"></i></h2>
+        <!-- Texto de about -->
         <section>
           <div class="paragraph">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
           </div>
           <div class="paragraph">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
           </div>
         </section>
+        <!-- botón download -->
         <div >
           <a class="button" href="#"><i class="fas fa-download"> <p id="boton"> Download Now! </p> </i></a>
         </div>
       </div>
     </section>
+    <!-- Sección contact -->
     <section  class="contact">
       <div class="blue">
         CONTACT ME
       </div>
       <hr class="line">
       <h2><i class="fas fa-star"></i></h2>
+      <!-- Formulario de contacto -->
       <form>
         Name<br>
         <input type="text" name="name"><br>
@@ -83,10 +93,12 @@
         Message<br>
         <input type="text" name="messa"><br>
         <div>
+      </form>
+          <!-- botón send -->
           <a class="buttondos" href=""> <p id="boton"> Send </p> </a>
         </div>
-      </form>
       </section>
+        <!-- sección footer -->
       <footer>
         <section>
           <div class="foot">LOCATION</div>
@@ -104,8 +116,9 @@
             <br> Bootstrap.</a></div>
         </section>
       </footer>
+        <!-- sección del copyright -->
       <section class="copyright">
        <p>Copyright © Your Website 2017</p>
    </section>
   </body>
-</html><!-- Agrega aquí la estructura HTML de tu sitio web -->
+</html>
